Label mit vorhandenen AP hinzugefügt, EnhancementController Instanz verfügbar machen

--- a/src/enhancement/enhancements/Enhancement.fxml
+++ b/src/enhancement/enhancements/Enhancement.fxml
@@ -26,6 +26,9 @@
       <Label text="Kosten: " />
       <Label fx:id="costLabel" prefWidth="35" alignment="CENTER_RIGHT" />
       <Label text="AP" prefWidth="50" />
+      <Label text="vorhanden: " />
+      <Label fx:id="apLabel" prefWidth="35" alignment="CENTER_RIGHT" />
+      <Label text="AP" prefWidth="50" />
       <CheckBox fx:id="chargenRules" text="Generierungsregeln" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <Button text="Zurücksetzen" onAction="#clear" />
       <Button text="Anwenden" onAction="#apply" />
