--- a/src/enhancement/skills/SkillGroup.fxml
+++ b/src/enhancement/skills/SkillGroup.fxml
@@ -21,9 +21,9 @@
          <Label minHeight="0" />
       </placeholder>
       <columns>
-         <TableColumn fx:id="nameColumn" text="Sonderfertigkeit" minWidth="200" prefWidth="200" editable="false" />
-         <TableColumn fx:id="descColumn" text="Beschreibung" minWidth="150" prefWidth="150" sortable="false" />
-         <TableColumn fx:id="variantColumn" text="Variante" minWidth="60" sortable="false" />
+         <TableColumn fx:id="nameColumn" text="Sonderfertigkeit" minWidth="200" prefWidth="200" editable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
+         <TableColumn fx:id="descColumn" text="Beschreibung" minWidth="150" prefWidth="150" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
+         <TableColumn fx:id="variantColumn" text="Variante" minWidth="60" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
          <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" style="-fx-alignment: CENTER;" />
          <TableColumn fx:id="validColumn" minWidth="0" maxWidth="0" prefWidth="0" />
          <TableColumn fx:id="cheaperColumn" minWidth="0" maxWidth="0" prefWidth="0" />
