--- a/src/enhancement/attributes/Attributes.fxml
+++ b/src/enhancement/attributes/Attributes.fxml
@@ -15,7 +15,7 @@
          </styleClass>
          <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
          <columns>
-            <TableColumn fx:id="attributesNameColumn" text="Eigenschaft" minWidth="100" resizable="false" sortable="false" />
+            <TableColumn fx:id="attributesNameColumn" text="Eigenschaft" minWidth="100" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
             <TableColumn fx:id="attributesSesColumn" text="SEs" prefWidth="65" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="attributesStartColumn" text="Von" prefWidth="60" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="attributesTargetColumn" text="Auf" prefWidth="60" resizable="false" sortable="false" editable="true" style="-fx-alignment: CENTER;" />
@@ -31,7 +31,7 @@
          </styleClass>
          <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
          <columns>
-            <TableColumn fx:id="energiesNameColumn" text="Basiswert" minWidth="100" resizable="false" sortable="false" />
+            <TableColumn fx:id="energiesNameColumn" text="Basiswert" minWidth="100" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
             <TableColumn fx:id="energiesSesColumn" text="SEs" prefWidth="65" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="energiesStartColumn" text="Von" prefWidth="60" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="energiesTargetColumn" text="Auf" prefWidth="60" resizable="false" sortable="false" editable="true" style="-fx-alignment: CENTER;" />
