--- a/src/enhancement/pros_cons/Quirks.fxml
+++ b/src/enhancement/pros_cons/Quirks.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -13,8 +14,11 @@
          <String fx:value="remove-horizontal-scrollbar" />
       </styleClass>
       <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
+      <placeholder>
+         <Label minHeight="0" />
+      </placeholder>
       <columns>
-         <TableColumn fx:id="nameColumn" text="Schlechte Eigenschaft" minWidth="150" resizable="false" sortable="false" editable="false" />
+         <TableColumn fx:id="nameColumn" text="Schlechte Eigenschaft" minWidth="150" resizable="false" sortable="false" editable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
          <TableColumn fx:id="sesColumn" text="SEs" prefWidth="65" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
          <TableColumn fx:id="startColumn" text="Von" prefWidth="60" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
          <TableColumn fx:id="targetColumn" text="Auf" prefWidth="60" resizable="false" sortable="false" editable="true" style="-fx-alignment: CENTER;" />
