--- a/src/enhancement/history/History.fxml
+++ b/src/enhancement/history/History.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.HBox?>
 
 <ScrollPane fx:id="pane" vbarPolicy="ALWAYS" fitToWidth="true" xmlns:fx="http://javafx.com/fxml" >
    <TableView fx:id="table" fixedCellSize="28" >
@@ -20,6 +19,7 @@
       <columns>
          <TableColumn fx:id="descriptionColumn" text="Steigerung" minWidth="100" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
          <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+         <TableColumn fx:id="apColumn" text="AP" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
          <TableColumn fx:id="dateColumn" text="Datum" prefWidth="100" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
       </columns>
    </TableView>
