--- a/src/enhancement/talents/SpellsGroup.fxml
+++ b/src/enhancement/talents/SpellsGroup.fxml
@@ -3,7 +3,6 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,6 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import dsatool.util.ReactiveComboBox?>
 
 <VBox fx:id="pane" style="-fx-padding: 0, 0, 0, 0;" xmlns:fx="http://javafx.com/fxml" >
    <ScrollPane hbarPolicy="NEVER" vbarPolicy="ALWAYS" fitToWidth="true" >
@@ -31,14 +31,15 @@
             <TableColumn fx:id="targetColumn" text="Auf" prefWidth="65" resizable="false" sortable="false" editable="true" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="methodColumn" text="Lernmethode" prefWidth="130" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+            <TableColumn fx:id="apColumn" text="AP" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
             <TableColumn fx:id="validColumn" minWidth="0" maxWidth="0" prefWidth="0" />
             <TableColumn fx:id="cheaperColumn" minWidth="0" maxWidth="0" prefWidth="0" />
          </columns>
       </TableView>
    </ScrollPane>
    <HBox spacing="2" >
-      <ComboBox fx:id="talentsList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
-      <ComboBox fx:id="representationsList" prefWidth="70" />
+      <ReactiveComboBox fx:id="talentsList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
+      <ReactiveComboBox fx:id="representationsList" prefWidth="70" />
       <Button fx:id="addButton" onAction="#addTalent" prefHeight="25" prefWidth="25" text="&#xE145;" >
          <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
          <font>
