UI-Komponenten verschoben

--- a/src/enhancement/talents/SpellsGroup.fxml
+++ b/src/enhancement/talents/SpellsGroup.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import dsatool.util.ReactiveComboBox?>
+<?import dsatool.ui.ReactiveComboBox?>
 
 <VBox fx:id="pane" style="-fx-padding: 0, 0, 0, 0;" xmlns:fx="http://javafx.com/fxml" >
    <ScrollPane hbarPolicy="NEVER" vbarPolicy="ALWAYS" fitToWidth="true" >
