--- a/src/enhancement/history/History.fxml
+++ b/src/enhancement/history/History.fxml
@@ -5,22 +5,27 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
 
-<ScrollPane fx:id="pane" vbarPolicy="ALWAYS" fitToWidth="true" xmlns:fx="http://javafx.com/fxml" >
-   <TableView fx:id="table" fixedCellSize="28" >
-      <styleClass>
-         <String fx:value="remove-vertical-scrollbar" />
-         <String fx:value="remove-horizontal-scrollbar" />
-      </styleClass>
-      <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
-      <placeholder>
-         <Label minHeight="0" />
-      </placeholder>
-      <columns>
-         <TableColumn fx:id="descriptionColumn" text="Steigerung" minWidth="100" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
-         <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
-         <TableColumn fx:id="apColumn" text="AP" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
-         <TableColumn fx:id="dateColumn" text="Datum" prefWidth="100" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
-      </columns>
-   </TableView>
-</ScrollPane>
+<VBox fx:id="root" xmlns:fx="http://javafx.com/fxml" >
+   <ScrollPane VBox.vgrow="ALWAYS" vbarPolicy="ALWAYS" fitToWidth="true">
+      <TableView fx:id="table" fixedCellSize="28" >
+         <styleClass>
+            <String fx:value="remove-vertical-scrollbar" />
+            <String fx:value="remove-horizontal-scrollbar" />
+         </styleClass>
+         <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
+         <placeholder>
+            <Label minHeight="0" />
+         </placeholder>
+         <columns>
+            <TableColumn fx:id="descriptionColumn" text="Steigerung" minWidth="100" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
+            <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+            <TableColumn fx:id="apColumn" text="AP" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+            <TableColumn fx:id="dateColumn" text="Datum" prefWidth="100" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+         </columns>
+      </TableView>
+   </ScrollPane>
+   <TextField fx:id="filter" />
+</VBox>
