--- a/src/enhancement/skills/SkillGroup.fxml
+++ b/src/enhancement/skills/SkillGroup.fxml
@@ -12,18 +12,17 @@
          <String fx:value="remove-vertical-scrollbar" />
          <String fx:value="remove-horizontal-scrollbar" />
       </styleClass>
-      <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
       <placeholder>
          <Label minHeight="0" />
       </placeholder>
       <columns>
          <TableColumn fx:id="nameColumn" text="Sonderfertigkeit" minWidth="200" prefWidth="200" editable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
          <TableColumn fx:id="descColumn" text="Beschreibung" minWidth="150" prefWidth="150" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
-         <TableColumn fx:id="variantColumn" text="Variante" minWidth="60" prefWidth="150" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
-         <TableColumn fx:id="costColumn" text="Kosten" prefWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
-         <TableColumn fx:id="apColumn" text="AP" prefWidth="75" resizable="false" style="-fx-alignment: CENTER;" />
-         <TableColumn fx:id="validColumn" minWidth="0" maxWidth="0" prefWidth="0" />
-         <TableColumn fx:id="cheaperColumn" minWidth="0" maxWidth="0" prefWidth="0" />
+         <TableColumn fx:id="variantColumn" text="Variante" minWidth="60" prefWidth="150" resizable="false" sortable="false" styleClass="left-aligned" style="-fx-alignment: CENTER-LEFT;" />
+         <TableColumn fx:id="costColumn" text="Kosten" minWidth="75" maxWidth="75" resizable="false" sortable="false" style="-fx-alignment: CENTER;" />
+         <TableColumn fx:id="apColumn" text="AP" minWidth="75" maxWidth="75" resizable="false" style="-fx-alignment: CENTER;" />
+         <TableColumn fx:id="validColumn" minWidth="0" maxWidth="0" />
+         <TableColumn fx:id="cheaperColumn" minWidth="0" maxWidth="0" />
       </columns>	
    </TableView>
 </TitledPane>	
