Verfügbares Geld anzeigen

--- a/src/enhancement/enhancements/Enhancement.fxml
+++ b/src/enhancement/enhancements/Enhancement.fxml
@@ -23,16 +23,15 @@
       </TableView>
    </ScrollPane>
    <HBox spacing="2">
-      <Label text="AP: " />
+      <Label text=" AP: " />
       <Label fx:id="apLabel" prefWidth="35" alignment="CENTER_RIGHT" />
-      <Label text="AP" prefWidth="50" />
-      <Label text="vorhanden: " />
-      <Label fx:id="availableApLabel" prefWidth="35" alignment="CENTER_RIGHT" />
-      <Label text="AP" prefWidth="50" />
+      <Label text=" / " />
+      <Label fx:id="availableApLabel" prefWidth="50" />
       <HBox fx:id="costBox" spacing="2">
          <Label text="Kosten: " />
          <Label fx:id="costLabel" prefWidth="35" alignment="CENTER_RIGHT" />
-         <Label text="Silber" prefWidth="50" />
+         <Label text=" / " />
+         <Label fx:id="availableMoneyLabel" prefWidth="125" />
       </HBox>
       <CheckBox fx:id="chargenRules" text="Generierungsregeln" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <Button text="Zurücksetzen" onAction="#clear" />
