--- a/src/enhancement/talents/TalentGroup.fxml
+++ b/src/enhancement/talents/TalentGroup.fxml
@@ -37,7 +37,7 @@
       </TableView>
       <HBox spacing="2" >
          <ReactiveComboBox fx:id="talentsList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
-         <Button fx:id="addButton" onAction="#addTalent" prefHeight="25" prefWidth="25" text="&#xE145;" >
+         <Button fx:id="addButton" onAction="#addTalent" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
             <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
             <font>
                <Font name="Material Icons" size="20.0" />
