--- a/src/enhancement/enhancements/Enhancement.fxml
+++ b/src/enhancement/enhancements/Enhancement.fxml
@@ -6,10 +6,16 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns:fx="http://javafx.com/fxml/1" spacing="5">
+   <StackPane xmlns:fx="http://javafx.com/fxml" VBox.Vgrow="ALWAYS" >
+      <TabPane fx:id="tabPane" styleClass="buttonedTabPane" />
+      <Button text="Abenteuerabschluss" onAction="#addAdventure" StackPane.alignment="TOP_RIGHT" styleClass="tabPaneButton" />
+   </StackPane>
    <ScrollPane hbarPolicy="NEVER" vbarPolicy="ALWAYS" fitToWidth="true" >
       <TableView fx:id="enhancementTable" editable="true" fixedCellSize="28">
          <placeholder>
