--- a/src/enhancement/history/AdventureDialog.fxml
+++ b/src/enhancement/history/AdventureDialog.fxml
@@ -56,9 +56,9 @@
    <HBox spacing="2" alignment="CENTER_LEFT" >
       <ReactiveComboBox fx:id="attributeList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <Button onAction="#addSE" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
-         <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
+         <padding><Insets top="0" right="0" bottom="-5" left="0"/></padding>
          <font>
-            <Font name="Material Icons" size="20.0" />
+            <Font name="Material Symbols Outlined" size="20.0" />
          </font>
          <tooltip>
             <Tooltip text="Hinzufügen" />
@@ -68,9 +68,9 @@
    <HBox spacing="2" alignment="CENTER_LEFT" >
       <ReactiveComboBox fx:id="energyList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <Button onAction="#addSE" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
-         <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
+         <padding><Insets top="0" right="0" bottom="-5" left="0"/></padding>
          <font>
-            <Font name="Material Icons" size="20.0" />
+            <Font name="Material Symbols Outlined" size="20.0" />
          </font>
          <tooltip>
             <Tooltip text="Hinzufügen" />
@@ -80,9 +80,9 @@
    <HBox spacing="2" alignment="CENTER_LEFT" >
       <ReactiveComboBox fx:id="talentList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <Button onAction="#addSE" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
-         <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
+         <padding><Insets top="0" right="0" bottom="-5" left="0"/></padding>
          <font>
-            <Font name="Material Icons" size="20.0" />
+            <Font name="Material Symbols Outlined" size="20.0" />
          </font>
          <tooltip>
             <Tooltip text="Hinzufügen" />
@@ -93,9 +93,9 @@
       <ReactiveComboBox fx:id="spellList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <ReactiveComboBox fx:id="representationsList" minWidth="70" maxWidth="70" />
       <Button fx:id="addSpellButton" onAction="#addSE" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
-         <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
+         <padding><Insets top="0" right="0" bottom="-5" left="0"/></padding>
          <font>
-            <Font name="Material Icons" size="20.0" />
+            <Font name="Material Symbols Outlined" size="20.0" />
          </font>
          <tooltip>
             <Tooltip text="Hinzufügen" />
