--- a/src/enhancement/talents/SpellsGroup.fxml
+++ b/src/enhancement/talents/SpellsGroup.fxml
@@ -40,9 +40,9 @@
       <ReactiveComboBox fx:id="talentsList" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
       <ReactiveComboBox fx:id="representationsList"  minWidth="80" maxWidth="70" />
       <Button fx:id="addButton" onAction="#addTalent" prefHeight="25" minWidth="25" maxWidth="25" text="&#xE145;" >
-         <padding><Insets top="0" right="0" bottom="0" left="0"/></padding>
+         <padding><Insets top="0" right="0" bottom="-6" left="0"/></padding>
          <font>
-            <Font name="Material Icons" size="20.0" />
+            <Font name="Material Symbols Outlined" size="20.0" />
          </font>
          <tooltip>
             <Tooltip text="Hinzufügen" />
